# Information

./: Readme.mkd  TODOlist.mkd  latest_progress.mkd  opensource-20130928.mkd  opensource-20140319.mkd  readme.md
BoardMinutes/: opensource-20130928.mkd  opensource-20140319.mkd  opensource-20140413.mkd
Reports/: 20131216-2013sumup.txt
Resources/2012/: GTUG Android校园行上海大学之旅.doc  计算机学院学生作为志愿者参加GDG活动记录.doc
Resources/201203HackingHelloWold-活动/HackingHelloWorld/: ndl.tar.bz2
Resources/201301Lecture_on_hacker/: 邀請函.txt
Resources/201305中國夢/: 中國夢--開源社區.doc
Resources/20130618開源力量企業IT大會/前期報名/: Check.txt  Enroll-list.txt  female.csv  for_open_force.cpp  male.csv
Resources/20130618開源力量企業IT大會/前期報名/parse_csv/: CMakeLists.txt
Resources/20130618開源力量企業IT大會/前期報名/parse_csv/src/: parse.cpp
Resources/20130618開源力量企業IT大會/後期工作/: 活動新聞稿.txt
Resources/201306团委报告/OpenSource/: 上海大学开源社区.pptx
Resources/20140227宣傳/: promoting.txt
Resources/20140404-春季系列讲座/: README.mkd
Resources/20140404-春季系列讲座/开源春季第一弹-for-MacOS/__MACOSX/: ._开源春季第一弹.key
Resources/20140404-春季系列讲座/开源春季第一弹-for-MacOS/开源春季第一弹.key/Data/: 院徽(字体轮廓)-957.ai
Resources/20140404-春季系列讲座/开源春季第一弹-for-MacOS/开源春季第一弹.key/Metadata/: DocumentIdentifier  Properties.plist
Resources/201405gitcafe活動/: 开源社区2014春季Gitcafe活动策划.doc  横幅.ai
Resources/20140919软件自由日活动/: 上大信使微信推送的开源问题.doc  上大软件自由日--策划书.doc
Resources/20140919软件自由日活动/演讲PPT/: Open Source in Enterprise(BY胡瀚森.pptx  企业中的开源（BY 陈悠.pptx
Resources/LOGO/: Logo-for-activities.ai  README.mkd
Resources/LOGO/开源和计算机学院logo/: SHUoplogo.ai  oplogowhite副本.ai  院徽-矢量.psd
(+3 files in other folders)
